examples/typeError/typeErrorInCopatternDest2.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : NatList
.tail (.head f)  = 1
